check_error.txt
    Checking MicMuteRs v0.1.0 (C:\Users\papop\Documents\MicMuteRs)
error[E0432]: unresolved import `windows_sys::Win32::UI::WindowsAndMessaging::GetActiveWindow`
  --> src\gui.rs:11:5
   |
11 |     GetActiveWindow
   |     ^^^^^^^^^^^^^^^ no `GetActiveWindow` in `Win32::UI::WindowsAndMessaging`

warning: unused import: `eCapture`
 --> src\audio.rs:3:5
  |
3 |     eCapture, eConsole, IMMDevice, IMMDeviceEnumerator, MMDeviceEnumerator, IAudioClient, AUDCLNT_SHAREMODE_SHARED,
  |     ^^^^^^^^
  |
  = note: `#[warn(unused_imports)]` (part of `#[warn(unused)]`) on by default

warning: unused import: `LWA_ALPHA`
 --> src\gui.rs:9:66
  |
9 |     GWL_EXSTYLE, WS_EX_LAYERED, WS_EX_TRANSPARENT, LWA_COLORKEY, LWA_ALPHA,
  |                                                                  ^^^^^^^^^

warning: unused variable: `arguments`
  --> src\startup.rs:73:9
   |
73 |     let arguments = format!("\"{}\"", exe_str);
   |         ^^^^^^^^^ help: if this is intentional, prefix it with an underscore: `_arguments`
   |
   = note: `#[warn(unused_variables)]` (part of `#[warn(unused)]`) on by default

For more information about this error, try `rustc --explain E0432`.
warning: `MicMuteRs` (bin "MicMuteRs") generated 3 warnings
error: could not compile `MicMuteRs` (bin "MicMuteRs") due to 1 previous error; 3 warnings emitted
